<resources>
    <string name="app_name">wknd6_A_BiddingWars</string>
    <string name="password_hint">Password</string>
    <string name="user_email_hint">User email</string>
    <string name="login_button_text">Sign in</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_up_email_invalid">Email address is not valid</string>
    <string name="sign_up_password_too_short">Password must be 6 or more characters</string>
    <string name="sign_up_fail_msg">Sign up failed. (Result: %s)</string>
    <string name="email_empty_message">Please input email</string>
    <string name="password_empty_message">Please input password</string>
    <string name="unkown_login_error">Unknown error signing in</string>
    <string name="verify_email_message">You must verify your email</string>
    <string name="num_bids_display">Bids: %d</string>
    <string name="top_bidder_display">Top Bidder: %s</string>
    <string name="publish_button_text">Publish your item!</string>
    <string name="error_no_item_photo">Please include a photo</string>
    <string name="error_no_item_name">Please give your item a name</string>
    <string name="error_no_item_description">Please write a description</string>
    <string name="file_provider_authority">com.aoinc.wknd6_a_biddingwars.fileprovider</string>
    <string name="item_description_hint">Item description</string>
    <string name="item_name_hint">Item name</string>
    <string name="simple_bid_button_text">Bid on it!</string>
    <string name="bid_seller_label">Sold by: %s</string>
    <string name="current_bid">Current bid: $%.2f</string>
    <string name="last_bidder_text">Last bidder: %s</string>
    <string name="total_bids_count">Total bids: %d</string>
    <string name="add_photo_content_desc">Click to add item photo</string>
    <string name="sign_out_button">Sign out</string>
    <string name="user_id_text">User ID: %s</string>
    <string name="user_email_text">Email: %s</string>
    <string name="user_location_text">Location: %s</string>
    <string name="sign_up_user_name_error">Please enter a user name</string>
    <string name="verification_email_alert">Check for verification email</string>
    <string name="sign_up_user_name_hint">User name</string>
    <string name="bid_amount_hint">Bid amount</string>
    <string name="bid_too_low_alert">You must bid higher</string>
    <string name="bid_amount_notify">You bid $%.2f on %s</string>
    <string name="awesome">AWESOME!</string>
</resources>