<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email_hint"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@id/login_email_inputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintTop_toBottomOf="@id/login_password_inputLayout"
        android:text="@string/login_button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_sign_up_text_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/teal_700"
        android:background="@color/transparent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/sign_up_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>