<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bid_photo_imageView"
        android:layout_width="match_parent"
        style="@style/ImageBase"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@id/guide_image_bottom"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_image_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bid_name_textView"
        style="@style/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide_image_bottom"
        tools:text="Apples and Banaynays" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bid_seller_textView"
        style="@style/TextViewBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bid_seller_label"
        app:layout_constraintTop_toBottomOf="@id/bid_name_textView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bid_current_price_textView"
        style="@style/TextViewBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_bid"
        app:layout_constraintEnd_toStartOf="@id/bid_num_bids_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bid_seller_textView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bid_last_bidder_textView"
        style="@style/TextViewBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_bidder_text"
        app:layout_constraintTop_toBottomOf="@id/bid_current_price_textView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bid_num_bids_textView"
        style="@style/TextViewBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_bids_count"
        app:layout_constraintBottom_toTopOf="@id/bid_last_bidder_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bid_current_price_textView"
        app:layout_constraintTop_toBottomOf="@id/bid_seller_textView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bid_description_textView"
        style="@style/TextViewBase"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bid_amount_textLayout"
        app:layout_constraintTop_toBottomOf="@+id/bid_last_bidder_textView"
        tools:text="Description of Apples and Banaynays - Description of Apples and Banaynays - Description of Apples and Banaynays - Description of Apples and Banaynays." />

    <!--    <com.google.android.material.imageview.ShapeableImageView-->
    <!--        android:id="@+id/bid_sold_imageView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:adjustViewBounds="true"-->
    <!--        android:src="@drawable/sold_stamp_raster"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        android:visibility="gone" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/simple_bid_button"
        style="@style/ButtonBase"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/simple_bid_button_text"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bid_amount_textLayout"
        android:layout_width="match_parent"
        style="@style/EditTextLayoutBase"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/simple_bid_button"
        app:layout_constraintTop_toBottomOf="@id/bid_description_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bid_amount_editText"
            style="@style/MoneyEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bid_amount_hint"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>