<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:background="#FFF7DD">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sign_up_photo_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@color/photo_background"
        app:layout_constraintBottom_toBottomOf="@id/guide_image_bottom"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/sign_up_photo_button"
        android:layout_width="128dp"
        android:layout_height="112dp"
        android:contentDescription="@string/add_photo_content_desc"
        android:backgroundTint="@color/purple_500"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_photo_imageView"
        app:layout_constraintEnd_toEndOf="@id/sign_up_photo_imageView"
        app:layout_constraintStart_toStartOf="@id/sign_up_photo_imageView"
        app:layout_constraintTop_toTopOf="@id/sign_up_photo_imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_image_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_user_name_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_user_name_hint"
        app:layout_constraintTop_toBottomOf="@id/guide_image_bottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_user_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_email_hint"
        app:layout_constraintTop_toBottomOf="@id/sign_up_user_name_inputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@id/sign_up_email_inputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/sign_up_button_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_inputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>