<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/list_photo_imageView"
            style="@style/ListImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_photo_24"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_title_textView"
            style="@style/ListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/list_photo_imageView"
            tools:text="Item Name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_seller_textView"
            style="@style/ListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bid_seller_label"
            app:layout_constraintTop_toBottomOf="@id/list_title_textView" />

        <!--        <com.google.android.material.textview.MaterialTextView-->
        <!--            android:id="@+id/list_bids_textView"-->
        <!--            style="@style/TextViewBase"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/list_seller_textView"-->
        <!--            tools:text="@string/num_bids_display"-->
        <!--            />-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_current_bid_textView"
            style="@style/ListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/list_seller_textView"
            tools:text="@string/current_bid" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/list_last_bidder_textView"
            style="@style/ListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/list_sold_barrier"
            app:layout_constraintTop_toBottomOf="@id/list_current_bid_textView"
            tools:text="@string/top_bidder_display" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/list_sold_barrier"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="list_sold_imageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/list_sold_imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:src="@drawable/sold_stamp_raster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_last_bidder_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>